--- a/00_Getting Started/02-Step by Step/meta.yaml
+++ b/00_Getting Started/02-Step by Step/meta.yaml
@@ -1,4 +1,4 @@
-description: This guide walks you through the process of setting up DSK an starting the process of documenting a Design System step by step.
+description: This guide walks you through the process of setting up DSK and starting the process of documenting a Design System step by step.
 
 tags:
   - needs links
