Update configuration docs

--- a/02_The Frontend/02_Configuration/meta.yaml
+++ b/02_The Frontend/02_Configuration/meta.yaml
@@ -1,4 +1,5 @@
-description: The frontend can be configured to suit your organisation’s needs.
+description: DSK can be configured to suit your organization’s needs.
 
-authors: 
-  - christoph@atelierdisko.de 
+authors:
+  - christoph@atelierdisko.de
+  - marius@atelierdisko.de
