--- a/10_The Design Definitions Tree/02_Documents/10_Components/meta.yaml
+++ b/10_The Design Definitions Tree/02_Documents/10_Components/meta.yaml
@@ -1,1 +1,1 @@
-description: Add documentation components are high-fidelity components for you to use in your documentation. They are purpose-built for documenting Design Systems.
+description: Documentation components are high-fidelity components for you to use in your documentation. They are purpose-built for documenting Design Systems.
