--- a/dsk.yaml
+++ b/dsk.yaml
@@ -1,7 +1,5 @@
-project: "Official Documentation"
+project: "Official Website"
 versions: 
   - "live"
-  - "dev-1.2"
-  - "dev-1.3"
 figma:
   accessToken: "__FIGMA_ACCESS_TOKEN__"
