--- a/10_The Design Definitions Tree/10_Configuration/meta.yaml
+++ b/10_The Design Definitions Tree/10_Configuration/meta.yaml
@@ -2,4 +2,4 @@ description: DSK can be configured to suit your organization’s needs.
 
 authors:
   - christoph@atelierdisko.de
-  - marius@atelierdisko.de
+  - mariuswilms@mailbox.org
