--- a/60_News/02_Design System Kit 1.1 released/meta.yaml
+++ b/60_News/02_Design System Kit 1.1 released/meta.yaml
@@ -5,6 +5,6 @@ description: >
   release of DSK in 2018.
 authors:
   - christoph@atelierdisko.de
-  - marius@atelierdisko.de
+  - mariuswilms@mailbox.org
 tags:
   - release
