--- a/60_News/03_Design System Kit 1.2 released/meta.yaml
+++ b/60_News/03_Design System Kit 1.2 released/meta.yaml
@@ -2,6 +2,6 @@ description:
   We're happy to announce the general availability of DSK 1.2 with support for documentation components.
   
 authors:
-  - marius@atelierdisko.de
+  - mariuswilms@mailbox.org
 tags:
   - release
