--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          repository: atelierdisko/dsk
+          repository: rundsk/_test_dsk
           ref: 1.3
       - uses: actions/setup-node@v1
       - uses: actions/setup-go@v1
@@ -54,7 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          repository: atelierdisko/dsk
+          repository: rundsk/_test_dsk
           ref: 1.3
       - uses: actions/download-artifact@v1
         with:
