--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          repository: rundsk/_test_dsk
+          repository: rundsk/dsk
           ref: 1.3
           path: dsk
       - uses: actions/setup-node@v1
@@ -55,7 +55,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          repository: rundsk/_test_dsk
+          repository: runds/dsk
           ref: 1.3
           path: dsk
       - uses: actions/download-artifact@v1
