--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,7 @@ jobs:
           name: assemblage
           path: .
 
-  deploy:
+  transfer:
     runs-on: ubuntu-latest
     needs:
       - assemble
