Add 1.3 release announcement

--- a/60_News/03_Design System Kit 1.2 released/meta.yaml
+++ b/60_News/03_Design System Kit 1.2 released/meta.yaml
@@ -1,5 +1,5 @@
 description:
-  We're happy to announce the general availability of DSK 1.2 with support for documentation components.
+  We’re happy to announce the general availability of DSK 1.2 with support for documentation components.
   
 authors:
   - mariuswilms@mailbox.org
