Add some missing descriptions

--- a/10_The Design Definitions Tree/05_Authors/meta.yaml
+++ b/10_The Design Definitions Tree/05_Authors/meta.yaml
@@ -1,3 +1,3 @@
+description: DSK’s authors feature lets you collect authors’ contact information in a central place and use it throughout your DDT.
 tags:
-  - needs description
   - needs images
