--- a/10_The Design Definitions Tree/03_Assets/meta.yaml
+++ b/10_The Design Definitions Tree/03_Assets/meta.yaml
@@ -1,3 +1,3 @@
+description: DSK gives you access to files of any type that you add as an asset to an aspect.
 tags:
-  - needs description
   - needs images
