--- a/10_The Design Definitions Tree/04_Meta Data/meta.yaml
+++ b/10_The Design Definitions Tree/04_Meta Data/meta.yaml
@@ -1,3 +1,3 @@
+description: Every aspect can be enhanced with meta data, like a description, tags, authors and more.
 tags:
-  - needs description
   - needs images
