--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,13 @@
+# Copyright 2021 Marius Wilms, Christoph Labacher. All rights reserved.
+#
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
+
 name: Deploy
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   dsk:
